--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 /*YekanBakhBold*/
 @font-face {
-    font-family: YekanBakhBold;
+    font-family: iranYekanBold;
     src: url(../fonts/IranYekan/YekanBakhBold.eot) format("eot"),
     url(../fonts/IranYekan/YekanBakhBold.woff) format("woff"),
     url(../fonts/IranYekan/YekanBakhBold.ttf) format("ttf")
@@ -12,7 +12,7 @@
 
 /*YekanBakhLight*/
 @font-face {
-    font-family: YekanBakhLight;
+    font-family: iranYekanLight;
     src: url(../fonts/IranYekan/YekanBakhLight.eot) format("eot"),
     url(../fonts/IranYekan/YekanBakhLight.woff) format("woff"),
     url(../fonts/IranYekan/YekanBakhLight.ttf) format("ttf")
@@ -20,7 +20,7 @@
 
 /*YekanBakhMedium*/
 @font-face {
-    font-family: YekanBakhMedium;
+    font-family: iranYekanMedium;
     src: url(../fonts/IranYekan/YekanBakhMedium.eot) format("eot"),
     url(../fonts/IranYekan/YekanBakhMedium.woff) format("woff"),
     url(../fonts/IranYekan/YekanBakhMedium.ttf) format("ttf")
@@ -28,7 +28,7 @@
 
 /*YekanBakhRegular*/
 @font-face {
-    font-family: YekanBakhRegular;
+    font-family: iranYekan;
     src: url(../fonts/IranYekan/YekanBakhRegular.eot) format("eot"),
     url(../fonts/IranYekan/YekanBakhRegular.woff) format("woff"),
     url(../fonts/IranYekan/YekanBakhRegular.ttf) format("ttf")
@@ -40,7 +40,7 @@ body {
     padding: 0;
     font-size: 16px;
     line-height: 24px !important;
-    font-family: iranyekan !important;
+    font-family: iranYekan ;
     overflow-x: hidden;
     text-align: right;
     direction: rtl;
@@ -54,7 +54,6 @@ p {
 body, html {
     height: 100%;
     margin: 0;
-    font-family: iranyekan !important
 }
 
 a {
@@ -63,4 +62,30 @@ a {
 
 input:focus, button:focus, textarea:focus {
     outline: none !important
+}
+
+
+/*style-property*/
+.dv-section-property{
+    padding: 100px 0 100px 0;
+}
+.dv-Property{
+    margin-bottom: 1em;
+}
+.dv-icon-Property{
+font-size: 40px;
+}
+
+.dv-h-Property{
+    color: #4D3D24;
+    font-size: 18px;
+    line-height: 30px;
+}
+.dv-span-Property {
+    color: #A8A8A8;
+    font-size: 14px;
+    line-height: 30px;
+}
+.dv-Property h3{
+margin-bottom: 0!important;
 }
