--- a/assets/fonts/icomoon.css
+++ b/assets/fonts/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?uqvnad');
-  src:  url('fonts/icomoon.eot?uqvnad#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?uqvnad') format('truetype'),
-    url('fonts/icomoon.woff?uqvnad') format('woff'),
-    url('fonts/icomoon.svg?uqvnad#icomoon') format('svg');
+  src:  url('../fonts/icomoon/icomoon.eot?uqvnad');
+  src:  url('../fonts/icomoon/icomoon.eot?uqvnad#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon/icomoon.ttf?uqvnad') format('truetype'),
+    url('../fonts/icomoon/icomoon.woff?uqvnad') format('woff'),
+    url('../fonts/icomoon/icomoon.svg?uqvnad#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
