--- a/assets/css/rj-style.css
+++ b/assets/css/rj-style.css
@@ -7,9 +7,16 @@ input:focus {
     outline: none !important;
 }
 
-.dv-custom-navbar{
-    padding : 2em 0;
+.dv-custom-navbar {
+    padding: 2em 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /*min-height: 125px;*/
+    z-index: 1;
 }
+
 .dropdown-toggle::after {
     margin: 0;
     border: none;
@@ -49,15 +56,19 @@ input:focus {
 #navbarSupportedContent .rj-right-menu li {
     padding: 5px 40px;
 }
-.dropdown-menu li{
+
+.dropdown-menu li {
     padding: 0 !important;
 }
-.rj-user-dropdown .dropdown-menu{
+
+.rj-user-dropdown .dropdown-menu {
     padding: 0 !important;
 }
+
 .rj-user-dropdown li {
     padding: 5px !important;
 }
+
 .rj-user-dropdown a:not(.dropdown-item) {
     width: 40px;
     height: 40px;
@@ -65,6 +76,7 @@ input:focus {
     padding: 0 !important;
     margin-left: 1.25em;
 }
+
 .rj-header-form {
     min-width: 300px;
     background: #fff;
@@ -120,18 +132,37 @@ input:focus {
     margin-left: 2em;
 }
 
+#blogTopBanner {
+    height: 490px;
+    position: relative;
+    background: rgb(252, 248, 243);
+    background: linear-gradient(90deg, rgba(252, 248, 243, 1) 32%, rgba(249, 241, 231, 1) 32%);
+    /*background: rgb(252,248,243);*/
+    /*background: linear-gradient(90deg, rgba(252,248,243,1) 30%, rgba(249,241,231,1) 32%);*/
+}
+
+.dv-blog-top-banner-bg-image{
+    background: url(../images/flower2-min.png) center no-repeat;
+    background-size: 100% 100%;
+    height: 342px;
+    width: 100%;
+    margin-top: 125px;
+    position: absolute;
+    top: 0;
+}
 /************************ Media Query ***********************/
 @media (max-width: 1400px) {
     #navbarSupportedContent .rj-right-menu li {
         padding: 5px 20px;
     }
 }
+
 /*device size < lg*/
-/*@media (min-width: 1200px) {*/
-/*    .dv-custom-navbar{*/
-/*        background: transparent !important;*/
-/*    }*/
-/*}*/
+@media (min-width: 1200px) {
+    .dv-custom-navbar{
+        background: transparent !important;
+    }
+}
 
 @media (min-width: 767px) {
     .rj-header-form {
