--- a/assets/css/rj-style.css
+++ b/assets/css/rj-style.css
@@ -385,6 +385,12 @@ button:hover, a:hover {
 }
 
 @media (max-width: 992px) {
+    .masonry {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+
     .dv-blog-top-banner-search-content {
         width: 90%;
         padding: 20px 15px;
@@ -400,12 +406,23 @@ button:hover, a:hover {
 }
 
 @media (max-width: 576px) {
+
+    .masonry .item {
+        padding: 0;
+    }
+
     .rj-search-title {
         font-size: 16px;
     }
 
     .dv-join-news {
         font-size: 14px;
+    }
+
+    .masonry {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
     }
 }
 
