--- a/assets/css/rj-style.css
+++ b/assets/css/rj-style.css
@@ -157,17 +157,18 @@ ul {
     color: #262F56;
 }
 
-.rj-header-icon:first-child {
-    margin-left: 2em;
-}
-
-#blogTopBanner {
+.dv-two-color-orange {
+    width: 100%;
     height: 490px;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     background: rgb(252, 248, 243);
     background: linear-gradient(90deg, rgba(252, 248, 243, 1) 32%, rgba(249, 241, 231, 1) 32%);
-    /*background: rgb(252,248,243);*/
-    /*background: linear-gradient(90deg, rgba(252,248,243,1) 30%, rgba(249,241,231,1) 32%);*/
+}
+
+.rj-header-icon:first-child {
+    margin-left: 2em;
 }
 
 .dv-blog-top-banner-bg-image {
@@ -484,6 +485,10 @@ button:hover, a:hover {
     justify-content: center;
 }
 
+#blogContent{
+    top: 490px;
+    padding-bottom: 490px;
+}
 /************************ END Blog ***********************/
 
 .dv-blog-info-top-bg-color {
@@ -495,7 +500,7 @@ button:hover, a:hover {
     height: 387px;
 }
 
-#blogInfo{
+#blogInfo {
     position: relative;
     top: 130px;
     padding-bottom: 130px;
@@ -518,13 +523,129 @@ button:hover, a:hover {
     margin-bottom: 1em;
 }
 
-.dv-blog-info-content-image{
+.dv-blog-info-content-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 /************************ END Blog Info ***********************/
+
+.dv-content-on-two-color {
+    position: relative;
+    top: 140px;
+    padding-bottom: 140px;
+}
+
+.dv-cart-product-content {
+    background: #fff;
+    border: 2px solid rgba(232, 159, 113, 0.71);;
+    border-radius: 10px;
+    padding: 35px;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.dv-cart-product-table tr th, .dv-cart-price-table tr td {
+    min-width: 195px;
+    border-bottom: 1px solid #F2C6AA;
+    border-left: 1px solid #F2C6AA;
+    height: 45px;
+    text-align: center;
+    vertical-align: text-top;
+    font-size: 16px;
+    line-height: 28px;
+    color: #333333;
+}
+
+.dv-cart-product-table tr th:last-child, .dv-cart-product-table tr th:first-child,
+.dv-cart-product-table tr td:last-child, .dv-cart-product-table tr td:first-child {
+    border-left: 0;
+}
+
+.dv-cart-product-table tr th:first-child, .dv-cart-product-table tr:last-child td {
+    border-bottom: 0;
+}
+
+.dv-cart-product-table tr td {
+    border-bottom: 1px solid #F2C6AA;
+    border-left: 1px solid #F2C6AA;
+    text-align: center;
+    font-size: 16px;
+    line-height: 150%;
+    color: #333333;
+}
+
+.dv-cart-price-table tr th:first-child {
+    border-bottom: 1px solid #F2C6AA;
+    border-left: 1px solid #F2C6AA;
+}
+
+.dv-cart-price-table tr td:first-child {
+    border-left: 1px solid #F2C6AA;
+}
+
+.dv-cart-price-table tr td {
+    vertical-align: middle;
+}
+
+.dv-cart-product-img {
+    width: 197px;
+    height: 215px;
+}
+
+.dv-product-table-title {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    color: #151875;
+}
+
+.dv-cart-trash-icon {
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.dv-cart-price-table {
+    width: 60%;
+}
+
+.dv-cart-price-button {
+    width: 40%;
+}
+
+.dv-pay-button {
+    display: block;
+    margin-right: auto;
+    background: #36425C;
+    font-weight: bold;
+    line-height: 28px;
+    color: #FFFFFF;
+    border-radius: 5px;
+    border: none;
+    width: 200px;
+    height: 55px;
+    transition : all 0.3s linear;
+}
+
+.dv-show-more-products{
+    padding: 15px;
+    border: 1px solid #36425C;
+    box-sizing: border-box;
+    border-radius: 5px;
+    line-height: 28px;
+    color: #4F4D4D;
+    font-weight: bold;
+    transition : all 0.3s linear;
+}
+
+.dv-show-more-products:hover{
+    background-color: #36425C;
+    color: #fff;
+}
+
+/************************ END Cart ***********************/
 
 
 /************************ Media Query ***********************/
@@ -545,6 +666,10 @@ button:hover, a:hover {
 }
 
 @media (max-width: 1200px) {
+
+    .dv-custom-navbar{
+        background-color: #fcf9f4 !important;
+    }
     .dv-blog-top-banner-bg-image {
         margin-top: 100px;
     }
@@ -574,6 +699,7 @@ button:hover, a:hover {
         height: 230px;
         margin-bottom: 1em;
     }
+
     .masonry {
         -webkit-column-count: 2;
         -moz-column-count: 2;
@@ -594,7 +720,28 @@ button:hover, a:hover {
     }
 }
 
+@media (max-width: 768px) {
+
+    .dv-cart-price-button{
+        margin-right: 2em !important;
+    }
+    .dv-cart-price-table {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+
+    .dv-cart-price-button {
+        width: 100%;
+    }
+}
+
 @media (max-width: 576px) {
+
+    .dv-show-more-products {
+        width: 100%;
+        display: block;
+        text-align: center;
+    }
 
     .masonry .item {
         padding: 0;
