--- a/assets/css/rj-style.css
+++ b/assets/css/rj-style.css
@@ -1,6 +1,7 @@
 :root {
     --dark-orange: #E89F71;
     --light-orange: #FCF8F3;
+    --dark-blue: #333333
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,6 +15,18 @@ form {
 input:focus {
     box-shadow: none !important;
     outline: none !important;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
 
 ul {
@@ -68,7 +81,9 @@ ul {
 .dropdown-menu[data-bs-popper] {
     left: -20%;
     border: none;
-    box-shadow: -1px 2px 6px 0 rgb(0 0 0 / 21%);
+    box-shadow: -1px 2px 6px 0 rgba(0, 0, 0, 0.21);
+    -webkit-box-shadow: -1px 2px 6px 0 rgba(0, 0, 0, 0.21);
+    -moz-box-shadow: -1px 2px 6px 0 rgba(0, 0, 0, 0.21);
 }
 
 .dropdown-menu li, .dropdown-menu li a {
@@ -130,7 +145,7 @@ ul {
 }
 
 .rj-header-form button:hover {
-    background: #E89F71;
+    background: var(--dark-orange);
     margin-left: 1em;
 }
 
@@ -448,7 +463,7 @@ button:hover, a:hover {
 .dv-footer-news-title {
     font-size: 20px;
     line-height: 28px;
-    color: #333333;
+    color: var(--dark-blue);
 }
 
 .rj-footer-email-input {
@@ -485,10 +500,11 @@ button:hover, a:hover {
     justify-content: center;
 }
 
-#blogContent{
+#blogContent {
     top: 490px;
     padding-bottom: 490px;
 }
+
 /************************ END Blog ***********************/
 
 .dv-blog-info-top-bg-color {
@@ -544,10 +560,11 @@ button:hover, a:hover {
     padding: 35px;
     width: 100%;
     overflow-x: auto;
+    height: 100%;
 }
 
 .dv-cart-product-table tr th, .dv-cart-price-table tr td {
-    min-width: 195px;
+    min-width: 150px;
     border-bottom: 1px solid #F2C6AA;
     border-left: 1px solid #F2C6AA;
     height: 45px;
@@ -555,7 +572,7 @@ button:hover, a:hover {
     vertical-align: text-top;
     font-size: 16px;
     line-height: 28px;
-    color: #333333;
+    color: var(--dark-blue);
 }
 
 .dv-cart-product-table tr th:last-child, .dv-cart-product-table tr th:first-child,
@@ -573,7 +590,7 @@ button:hover, a:hover {
     text-align: center;
     font-size: 16px;
     line-height: 150%;
-    color: #333333;
+    color: var(--dark-blue);
 }
 
 .dv-cart-price-table tr th:first-child {
@@ -616,20 +633,22 @@ button:hover, a:hover {
 }
 
 .dv-pay-button {
-    display: block;
+    align-items: center;
+    justify-content: center;
+    display: flex;
     margin-right: auto;
     background: #36425C;
     font-weight: bold;
     line-height: 28px;
-    color: #FFFFFF;
+    color: #FFFFFF !important;
     border-radius: 5px;
     border: none;
     width: 200px;
     height: 55px;
-    transition : all 0.3s linear;
+    transition: all 0.3s linear;
 }
 
-.dv-show-more-products{
+.dv-show-more-products {
     padding: 15px;
     border: 1px solid #36425C;
     box-sizing: border-box;
@@ -637,14 +656,136 @@ button:hover, a:hover {
     line-height: 28px;
     color: #4F4D4D;
     font-weight: bold;
-    transition : all 0.3s linear;
+    transition: all 0.3s linear;
 }
 
-.dv-show-more-products:hover{
+.dv-show-more-products:hover {
     background-color: #36425C;
     color: #fff;
 }
 
+.dv-product-count {
+    background: #2B354B;
+    border-radius: 5px;
+    width: 128px;
+    height: 50px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dv-product-count-icon {
+    width: 38px;
+    height: 38px;
+    background: #36425C;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+}
+
+.dv-product-count-number {
+    width: 38px;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 18px;
+}
+
+.dv-cart-address-title {
+    font-size: 20px;
+    line-height: 35px;
+    color: var(--dark-blue);
+}
+
+.dv-cart-from-label-span {
+    margin-bottom: 0.5em;
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--dark-blue);
+}
+
+.dv-cart-form-label-input {
+    width: 100%;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 14px;
+    line-height: 21px;
+    color: var(--dark-blue);
+}
+
+.dv-cart-form-label-input:focus {
+    border-color: var(--dark-orange);
+}
+
+.dv-cart-form-label-input::placeholder {
+    color: #626262;
+}
+
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    height: 63px;
+    padding: 20px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+.dv-cart-left-content-image{
+    width: 100px;
+    height: 100px;
+    background-color: #f8f8f8;
+    border-radius: 10px;
+}
+.dv-custom-badge{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    background: #36425C;
+}
+
+.dv-left-content-after-image{
+    width: calc(100% - 110px);
+}
+
+.dv-custom-hr{
+    color: var(--dark-orange);
+    margin: 2em 0;
+}
+.dv-factor-title , .dv-cart-product-price{
+    font-size: 16px;
+    line-height: 28px;
+    color: var(--dark-blue);
+}
+
+.dv-address-icon:before{
+    font-size: 24px;
+    color: var(--dark-orange);
+}
+
+.dv-user-name-title{
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--dark-blue);
+}
 /************************ END Cart ***********************/
 
 
@@ -667,9 +808,10 @@ button:hover, a:hover {
 
 @media (max-width: 1200px) {
 
-    .dv-custom-navbar{
+    .dv-custom-navbar {
         background-color: #fcf9f4 !important;
     }
+
     .dv-blog-top-banner-bg-image {
         margin-top: 100px;
     }
@@ -722,9 +864,10 @@ button:hover, a:hover {
 
 @media (max-width: 768px) {
 
-    .dv-cart-price-button{
+    .dv-cart-price-button {
         margin-right: 2em !important;
     }
+
     .dv-cart-price-table {
         width: 100%;
         margin-bottom: 1em;
@@ -736,6 +879,9 @@ button:hover, a:hover {
 }
 
 @media (max-width: 576px) {
+    .container{
+        padding: 0 15px !important;
+    }
 
     .dv-show-more-products {
         width: 100%;
@@ -762,16 +908,21 @@ button:hover, a:hover {
     }
 }
 
-
 @media (min-width: 1480px) {
 
+    .dv-cart-product-table tr th, .dv-cart-price-table tr td {
+        min-width: 195px;
+    }
+
     /*font-size : 16px*/
-    .dv-footer-links-list-link {
+    .dv-footer-links-list-link , .dv-custom-badge , .dv-user-name-title {
         font-size: 16px;
     }
 
     /*font-size : 18px*/
-    p, .rj-footer-email-input, .dv-footer-location-text {
+    p, .rj-footer-email-input, .dv-footer-location-text,
+    .dv-cart-form-label-input, .dv-cart-from-label-span ,
+    .dv-factor-title , .dv-cart-product-price{
         font-size: 18px;
         line-height: 28px;
     }
